force-app/main/default/objects/clariti__LedgerRule__c/clariti__LedgerRule__c.object-meta.xml
<CustomObject>
    <description>Ledger Rules define which ledger treatments to initiate when a specific transaction occurs.</description>
    <label>Ledger Rule</label>
    <nameField>
        <displayFormat>LR-{000}</displayFormat>
        <label>Ledger Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ledger Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>