force-app/main/default/objects/clariti__LedgerRule__c/fields/clariti__Active__c.field-meta.xml
<CustomField>
    <fullName>clariti__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To deactivate the ledger rule, clear the checkbox. This won’t affect existing journal entry items created via this ledger rule</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>