force-app/main/default/objects/clariti__LedgerRule__c/fields/clariti__FinancialEvent__c.field-meta.xml
<CustomField>
    <fullName>clariti__FinancialEvent__c</fullName>
    <inlineHelpText>The event which triggers the creation of journal entry items in the ledger accounts</inlineHelpText>
    <label>Financial Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InvoicePosted__e</fullName>
                <label>Invoice Posted</label>
            </value>
            <value>
                <fullName>InvoiceVoided__e</fullName>
                <label>Invoice Voided</label>
            </value>
            <value>
                <fullName>PaymentProcessed__e</fullName>
                <label>Payment Processed</label>
            </value>
            <value>
                <fullName>PaymentRefunded__e</fullName>
                <label>Payment Refunded</label>
            </value>
            <value>
                <fullName>PaymentVoided__e</fullName>
                <label>Payment Voided</label>
            </value>
            <value>
                <fullName>DepositTransferred__e</fullName>
                <label>Deposit Transferred</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>