force-app/main/default/objects/clariti__LedgerRule__c/fields/clariti__PayableItemType__c.field-meta.xml
<CustomField>
    <fullName>clariti__PayableItemType__c</fullName>
    <description>The Payable Item type being paid for (e.g. Fee, Invoice Item, etc.), can be used as a parameter to create different ledger treatments for the same trigger event.</description>
    <inlineHelpText>The Payable Item type being paid for (e.g. Fee, Invoice Item, etc.), can be used as a parameter to create different ledger treatments for the same trigger event.</inlineHelpText>
    <label>Payable Item Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>InvoiceItem__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>