force-app/main/default/objects/clariti__LedgerRule__c/fields/clariti__PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>clariti__PaymentMethod__c</fullName>
    <inlineHelpText>The payment method of the transaction can be used as a parameter to create different ledger treatments for the same trigger event.</inlineHelpText>
    <label>Payment Method</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>SecurityDeposit</fullName>
                <label>Security Deposit</label>
            </value>
            <value>
                <fullName>TrustAccount</fullName>
                <label>Trust Account</label>
            </value>
            <value>
                <fullName>CashBond</fullName>
                <label>Cash Bond</label>
            </value>
            <value>
                <fullName>AccountCredit</fullName>
                <label>Account Credit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>