force-app/main/default/objects/clariti__LedgerRule__c/fields/clariti__PaymentType__c.field-meta.xml
<CustomField>
    <fullName>clariti__PaymentType__c</fullName>
    <label>Payment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Service Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>